--- a/public/hello.css
+++ b/public/hello.css
@@ -163,7 +163,7 @@ h3 {
   padding: 12px;
   width: 76%;
 }
-@media (max-width:600px){
+/*@media (max-width:600px){
   .jumbotext {
     position: absolute;
     top: 38px;
@@ -233,4 +233,4 @@ h3 {
     text-align: center;
     float: right;
     margin-right: 100px;
-    margin-top: 120px;
+    margin-top: 120px;*/
