--- a/public/hello.css
+++ b/public/hello.css
@@ -3,18 +3,18 @@
 
   .jumbotext {
     position: absolute;
-    top: 90px;
-    right: 48px;
-    font-size: 30px;
+    top: 78px;
+    right: 25px;
+    font-size: 26px;
     font-family: lato;
     text-align: center;
   }
   .contact-icons {
     font-size: 35px;
     position: relative;
-    top: -103px;
+    top: -120px;
     float: right;
-    margin-right: 164px;
+    margin-right: 190px;
 
   }
   a .fa {
@@ -87,8 +87,11 @@
     font-size: 18px;
     font-family: Lato;
     text-align:center;
-    padding: 46px 210px 70px 160px;
+    /*padding: 46px 210px 70px 160px;*/
     line-height: 1.4;
+    padding-left: 20%;
+padding-right: 20%;
+margin-bottom: 70px;
   }
   .info {
     font-size: 13px;
@@ -172,36 +175,37 @@
 
   .jumbotext {
     position: absolute;
-    top: 76px;
-    right: 30px;
-    font-size: 18px;
-    font-family: lato;
-    text-align: center;
+        top: 73px;
+        right: 14px;
+        font-size: 14px;
+        font-family: lato;
+        text-align: center;
   }
   .contact-icons {
     font-size: 28px;
       position: relative;
       top: -102px;
       float: right;
-      margin-right: 89px;
+      margin-right: 67px;
 
   }
   a .fa {
   color: #222;
   }
   span {
-    font-size: 18px;
+    font-size: 12px;
   }
   .about-page {
     margin-top: 70px;
   }
   .wrap {
-    bottom: 14px;
+    bottom: 12px;
       padding-top: -4px;
       font: 100 17px/1 Lato;
       position: fixed;
       background: white;
-      width: 100%;
+      width: 113%;
+      margin-left: -34px;
   }
 
   .nav {
@@ -279,7 +283,7 @@
     font-family: Lato;
     text-align: center;
     float: right;
-    margin-right: 153px;
+    margin-right: 76px;
     margin-top: 25px;
   }
   .madskillz {
@@ -289,7 +293,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    margin: 82px 141px;
+    margin: 79px 94px;
     background: white;
   }
   .flex-item {
@@ -323,13 +327,11 @@
   }
 
   .wyn, .gogo, .sss {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: -35px;
-    font-size: 14px;
+    text-align: center;
+        padding-left: 20%;
+        padding-right: 20%;
+        padding-bottom: 47px;
+
   }
   .experience p {
     display: inline-block;
@@ -352,14 +354,14 @@
   font-size: 9px;
   font-family: lato;
   text-align: center;
-  margin-left: 52%;
+  margin-left: 48%;
 }
 .contact-icons {
-  font-size: 22px;
+  font-size: 20px;
   position: relative;
-  top: -60px;
+  top: -52px;
   float: right;
-  margin-right: 2%;
+  margin-right: 1%;
 
 }
 a .fa {
@@ -372,13 +374,14 @@ span {
   margin-top: 55px;
 }
 .wrap {
- bottom: 0;
- padding-top: 0;
- font: 100 11px/4 Lato;
- position: fixed;
- background: white;
- width: 100%;
- z-index: 4;
+  bottom: 19px;
+      /* padding-top: 0; */
+      font: 100 11px/1 Lato;
+      position: fixed;
+      background: white;
+      width: 110%;
+      margin-left: -38px;
+      z-index: 4;
 }
 
 .nav {
@@ -470,7 +473,7 @@ h3 {
 }
 .madskillz {
   /*padding-bottom: 60px;*/
-  margin-top: 82%;
+  margin-top: 96%;
 }
 .flex-container {
   display: flex;
