--- a/public/hello.css
+++ b/public/hello.css
@@ -261,6 +261,10 @@ margin-bottom: 70px;
     margin-left: 39%;
     margin-top: 1px;
   }
+
+  .madskillz h3 {
+    margin-left: 272px !important;
+  }
   .about p {
     font-size: 18px;
     font-family: Lato;
@@ -374,7 +378,7 @@ span {
   margin-top: 55px;
 }
 .wrap {
-  bottom: 19px;
+  bottom: 0px;
       /* padding-top: 0; */
       font: 100 11px/1 Lato;
       position: fixed;
