--- a/public/hello.css
+++ b/public/hello.css
@@ -1,12 +1,12 @@
 @media (max-width : 2000px) and (min-width : 900px) {
-  @import url(http://fonts.googleapis.com/css?family=Lato:300,500);
+  @import url(http://fonts.googleapis.com/css?family=Lato, sans-serif:300,500);
 
   .jumbotext {
     position: absolute;
     top: 78px;
     right: 25px;
     font-size: 26px;
-    font-family: lato;
+    font-family: Lato, sans-serif;
     text-align: center;
   }
   .contact-icons {
@@ -29,7 +29,7 @@
   .wrap {
    bottom: 3px;
    padding-top: 0;
-   font: 300 16px/1.2 Lato;
+   font: 300 16px/1.2 Lato, sans-serif;
    position: fixed;
    background: white;
    width: 100%;
@@ -79,13 +79,13 @@
   }
   h3 {
     font-size: 28px;
-    font-family: Lato;
+    font-family: Lato, sans-serif, sans-serif;;
     text-align: center;
     padding-top: 2px;
   }
   .about p {
     font-size: 18px;
-    font-family: Lato;
+    font-family: Lato, sans-serif, sans-serif;;
     text-align:center;
     /*padding: 46px 210px 70px 160px;*/
     line-height: 1.4;
@@ -95,7 +95,7 @@ margin-bottom: 70px;
   }
   .info {
     font-size: 13px;
-    font-family: Lato;
+    font-family: Lato, sans-serif, sans-serif;
     text-align: center;
     float: left;
     margin-left: 200px;
@@ -104,7 +104,7 @@ margin-bottom: 70px;
   }
   .info2 {
     font-size: 13px;
-    font-family: Lato;
+    font-family: Lato, sans-serif, sans-serif;
     text-align: center;
     float: right;
     margin-right: 207px;
@@ -159,7 +159,7 @@ margin-bottom: 70px;
   .experience p {
     display: inline-block;
     color: #757575;
-    font-family: lato;
+    font-family: Lato, sans-serif;
     line-height: 1.4;
     text-align: justify;
     display: block;
@@ -178,7 +178,7 @@ margin-bottom: 70px;
         top: 73px;
         right: 14px;
         font-size: 14px;
-        font-family: lato;
+        font-family: Lato, sans-serif;
         text-align: center;
   }
   .contact-icons {
@@ -201,7 +201,7 @@ margin-bottom: 70px;
   .wrap {
     bottom: 12px;
       padding-top: -4px;
-      font: 100 17px/1 Lato;
+      font: 100 17px/1 Lato, sans-serif;
       position: fixed;
       background: white;
       width: 113%;
@@ -254,7 +254,7 @@ margin-bottom: 70px;
   }
   h3 {
     font-size: 29px;
-    font-family: Lato;
+    font-family: Lato, sans-serif;
     text-align: center;
     padding-top: -4px;
     position: absolute;
@@ -267,7 +267,7 @@ margin-bottom: 70px;
   }
   .about p {
     font-size: 18px;
-    font-family: Lato;
+    font-family: Lato, sans-serif;
     text-align: center;
     padding: 10px 100px 10px 100px;
     line-height: 1.4;
@@ -275,7 +275,7 @@ margin-bottom: 70px;
   }
   .info {
     font-size: 13px;
-    font-family: Lato;
+    font-family: Lato, sans-serif;
     text-align: center;
     float: left;
     margin-left: 87px;
@@ -284,7 +284,7 @@ margin-bottom: 70px;
   }
   .info2 {
     font-size: 13px;
-    font-family: Lato;
+    font-family: Lato, sans-serif;
     text-align: center;
     float: right;
     margin-right: 76px;
@@ -340,7 +340,7 @@ margin-bottom: 70px;
   .experience p {
     display: inline-block;
     color: #757575;
-    font-family: lato;
+    font-family: Lato, sans-serif;
     line-height: 1.4;
     text-align: justify;
     display: block;
@@ -356,7 +356,7 @@ margin-bottom: 70px;
   position: absolute;
   top: 23px;
   font-size: 9px;
-  font-family: lato;
+  font-family: Lato, sans-serif;
   text-align: center;
   margin-left: 48%;
 }
@@ -380,7 +380,7 @@ span {
 .wrap {
   bottom: 0px;
       /* padding-top: 0; */
-      font: 100 11px/1 Lato;
+      font: 100 11px/1 Lato, sans-serif;
       position: fixed;
       background: white;
       width: 110%;
@@ -436,7 +436,7 @@ span {
 }
 h3 {
   font-size: 19px;
-  font-family: Lato;
+  font-family: Lato, sans-serif;
   text-align: center;
   /*padding-top: 2px;*/
 }
@@ -452,7 +452,7 @@ h3 {
 
 .about p {
   font-size: 10px;
-  font-family: Lato;
+  font-family: Lato, sans-serif;
   /*text-align:center;*/
   /*padding: 46px 210px 70px 160px;*/
   /*line-height: 1.4;*/
@@ -460,7 +460,7 @@ h3 {
 
 .info {
   font-size: 8px;
-  font-family: Lato;
+  font-family: Lato, sans-serif;
   text-align: center;
   float: left;
   margin-left: 14px;
@@ -469,7 +469,7 @@ h3 {
 }
 .info2 {
   font-size: 8px;
-  font-family: Lato;
+  font-family: Lato, sans-serif;
   text-align: center;
   float: right;
   margin-right: 30px;
@@ -536,7 +536,7 @@ height: 92px;
 .experience p {
   display: inline-block;
   color: #757575;
-  font-family: lato;
+  font-family: Lato, sans-serif;
   line-height: 1.4;
   text-align: justify;
   display: block;
