--- a/public/hello.css
+++ b/public/hello.css
@@ -355,7 +355,7 @@ margin-bottom: 70px;
 .jumbotext {
   position: absolute;
   top: 23px;
-  font-size: 9px;
+  font-size: 8px;
   font-family: Lato, sans-serif;
   text-align: center;
   margin-left: 48%;
@@ -443,7 +443,7 @@ h3 {
 
 .about {
   position: absolute;
-  margin-top: 165px;
+  margin-top: 174px;
   text-align: center;
   margin-right: 20px;
   margin-left: 20px;
@@ -451,11 +451,16 @@ h3 {
 }
 
 .about p {
-  font-size: 10px;
+  font-size: 12px;
   font-family: Lato, sans-serif;
   /*text-align:center;*/
   /*padding: 46px 210px 70px 160px;*/
   /*line-height: 1.4;*/
+  color: #757575;
+font-family: Lato, sans-serif;
+line-height: 1.4;
+text-align: justify;
+display: block;
 }
 
 .info {
@@ -477,7 +482,7 @@ h3 {
 }
 .madskillz {
   /*padding-bottom: 60px;*/
-  margin-top: 96%;
+  margin-top: 114%;
 }
 .flex-container {
   display: flex;
@@ -516,11 +521,11 @@ height: 92px;
 height: 92px;
 }
 .experience {
-  display: flex;
+  /*display: flex;
   flex-flow: row wrap;
   justify-content: center;
   background: white;
-  margin: 1px;
+  margin: 1px;*/
 }
 
 .wyn, .gogo, .sss {
@@ -533,6 +538,10 @@ height: 92px;
   font-size: 14px;
   margin-bottom: 53px;
 }
+
+.wyn, .gogo, .sss img {
+
+}
 .experience p {
   display: inline-block;
   color: #757575;
@@ -542,6 +551,6 @@ height: 92px;
   display: block;
   padding: 5px 20px;
   padding: 12px;
-  width: 76%;
+  width: 72%;
 }
 }
