--- a/public/hello.css
+++ b/public/hello.css
@@ -1,354 +1,4 @@
-@media (max-width : 2000px) and (min-width : 900px) {
-  @import url(http://fonts.googleapis.com/css?family=Lato, sans-serif:300,500);
 
-  .jumbotext {
-    position: absolute;
-    top: 78px;
-    right: 25px;
-    font-size: 26px;
-    font-family: Lato, sans-serif;
-    text-align: center;
-  }
-  .contact-icons {
-    font-size: 35px;
-    position: relative;
-    top: -120px;
-    float: right;
-    margin-right: 190px;
-
-  }
-  a .fa {
-  color: #222;
-  }
-  span {
-    font-size: 20px;
-  }
-  .about-page {
-    margin-top: 100px;
-  }
-  .wrap {
-   bottom: 3px;
-   padding-top: 0;
-   font: 300 16px/1.2 Lato, sans-serif;
-   position: fixed;
-   background: white;
-   width: 100%;
-  }
-
-  .nav {
-    list-style: none;
-    padding-top: 0;
-  }
-
-  .nav li {
-    float: left; /*1*/
-    padding-left: 158px;
-  }
-
-  .nav > li a {
-    display: block; /*1*/
-    padding: 12px 18px; /*2*/
-    text-decoration: none; /*3*/
-    color: #999; /*4*/
-    border: 1px solid #eee;
-
-    transition: all ease .5s;
-    font-weight: bold;
-  }
-
-  /*
-    fade out all links on ul hover
-  */
-  .nav:hover > li a {
-    opacity: .5;
-    transition: all ease .5s;
-  }
-
-  /*
-    override previous rule to highlight current link
-  */
-  .nav > li:hover a {
-    opacity: 1;
-    color: black;
-    border-color: #3D3D3D;
-
-  }
-  .jess-circle {
-    /*padding-left: 45.5%;*/
-    text-align: center;
-  }
-  h3 {
-    font-size: 28px;
-    font-family: Lato, sans-serif, sans-serif;;
-    text-align: center;
-    padding-top: 2px;
-  }
-  .about p {
-    font-size: 18px;
-    font-family: Lato, sans-serif, sans-serif;;
-    text-align:center;
-    /*padding: 46px 210px 70px 160px;*/
-    line-height: 1.4;
-    padding-left: 20%;
-padding-right: 20%;
-margin-bottom: 70px;
-  }
-  .info {
-    font-size: 13px;
-    font-family: Lato, sans-serif, sans-serif;
-    text-align: center;
-    float: left;
-    margin-left: 200px;
-    margin-right: -13px;
-    margin-top: 160px;
-  }
-  .info2 {
-    font-size: 13px;
-    font-family: Lato, sans-serif, sans-serif;
-    text-align: center;
-    float: right;
-    margin-right: 207px;
-    margin-top: 140px;
-  }
-  .madskillz {
-    padding-bottom: 60px;
-  }
-  .flex-container {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    margin: 73px 217px;
-    background: white;
-  }
-  .flex-item {
-    /*max-width: 580px;*/
-    width: 125px;
-    height: 125px;
-    margin: 10px;
-    text-align: center;
-  }
-  .ruby-item {
-    margin-top: 26px;
-    margin-left: 8px;
-    text-align: center;
-  }
-  .html-item {
-    margin-top: 16px;
-  }
-  .flex-item img {
-    width: 100%;
-    margin: 0;
-    padding:0;
-  }
-  .experience {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    background: white;
-  }
-
-  .wyn, .gogo, .sss {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: -35px;
-    font-size: 16px;
-  }
-  .experience p {
-    display: inline-block;
-    color: #757575;
-    font-family: Lato, sans-serif;
-    line-height: 1.4;
-    text-align: justify;
-    display: block;
-    padding: 5px 20px;
-    padding: 12px;
-    width: 76%;
-  }
-
-}
-
-@media (min-width : 600px) and (max-width : 900px){
-  @import url(http://fonts.googleapis.com/css?family=Lato:300,500);
-
-  .jumbotext {
-    position: absolute;
-        top: 73px;
-        right: 14px;
-        font-size: 14px;
-        font-family: Lato, sans-serif;
-        text-align: center;
-  }
-  .contact-icons {
-    font-size: 28px;
-      position: relative;
-      top: -102px;
-      float: right;
-      margin-right: 67px;
-
-  }
-  a .fa {
-  color: #222;
-  }
-  span {
-    font-size: 12px;
-  }
-  .about-page {
-    margin-top: 70px;
-  }
-  .wrap {
-    bottom: 12px;
-      padding-top: -4px;
-      font: 100 17px/1 Lato, sans-serif;
-      position: fixed;
-      background: white;
-      width: 113%;
-      margin-left: -34px;
-  }
-
-  .nav {
-    list-style: none;
-    padding-top: 0;
-  }
-
-  .nav li {
-    float: left; /*1*/
-    padding-left: 65px;
-  }
-
-  .nav > li a {
-    display: block; /*1*/
-    padding: 12px 18px; /*2*/
-    text-decoration: none; /*3*/
-    color: #999; /*4*/
-    border: 1px solid #eee;
-
-    transition: all ease .5s;
-    font-weight: bold;
-  }
-
-  /*
-    fade out all links on ul hover
-  */
-  .nav:hover > li a {
-    opacity: .5;
-    transition: all ease .5s;
-  }
-
-  /*
-    override previous rule to highlight current link
-  */
-  .nav > li:hover a {
-    opacity: 1;
-    color: black;
-    border-color: #3D3D3D;
-
-  }
-  .jess-circle img{
-    /*padding-left: 45.5%;*/
-    text-align: center;
-    margin-top: 62px;
-    margin-left: 12px;
-  }
-  h3 {
-    font-size: 29px;
-    font-family: Lato, sans-serif;
-    text-align: center;
-    padding-top: -4px;
-    position: absolute;
-    margin-left: 39%;
-    margin-top: 1px;
-  }
-
-  .madskillz h3 {
-    margin-left: 272px !important;
-  }
-  .about p {
-    font-size: 18px;
-    font-family: Lato, sans-serif;
-    text-align: center;
-    padding: 10px 100px 10px 100px;
-    line-height: 1.4;
-    margin-top: 58px;
-  }
-  .info {
-    font-size: 13px;
-    font-family: Lato, sans-serif;
-    text-align: center;
-    float: left;
-    margin-left: 87px;
-    margin-right: 40px;
-    margin-top: 41px;
-  }
-  .info2 {
-    font-size: 13px;
-    font-family: Lato, sans-serif;
-    text-align: center;
-    float: right;
-    margin-right: 76px;
-    margin-top: 25px;
-  }
-  .madskillz {
-    padding-bottom: 60px;
-  }
-  .flex-container {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    margin: 79px 94px;
-    background: white;
-  }
-  .flex-item {
-    /*max-width: 580px;*/
-    width: 125px;
-    height: 125px;
-    margin: 10px;
-    text-align: center;
-    margin-top: 63px;
-  }
-  .ruby-item {
-    margin-top: 26px;
-    margin-left: 8px;
-    text-align: center;
-    margin-top: 139px;
-  }
-  .html-item {
-    margin-top: 130px;
-  }
-  .flex-item img {
-    width: 100%;
-    margin: 0;
-    padding:0;
-    margin-top: 63px;
-  }
-  .experience {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    background: white;
-  }
-
-  .wyn, .gogo, .sss {
-    text-align: center;
-        padding-left: 20%;
-        padding-right: 20%;
-        padding-bottom: 47px;
-
-  }
-  .experience p {
-    display: inline-block;
-    color: #757575;
-    font-family: Lato, sans-serif;
-    line-height: 1.4;
-    text-align: justify;
-    display: block;
-    padding: 5px 20px;
-    padding: 12px;
-    width: 76%;
-  }
-}
 @media (min-width: 80px) and (max-width : 600px) {
   @import url(http://fonts.googleapis.com/css?family=Lato:300,500);
 
@@ -553,4 +203,103 @@ height: 92px;
   padding: 12px;
   width: 72%;
 }
+
+/*
+.col-image {
+  width: 66.66%;
+  margin-right: 3%;
+}
+
+.col-text {
+  width: 33.33%;
+}
+
+.col-text p {
+  margin: 0 0 13.5px;
+}
+
+.col-image img {
+  max-width: 100%;
+  height: auto;
+}*/
+
+
+
+
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.portfolio {
+  max-width: 100%;
+  height: auto;
+  margin: 40px auto auto auto;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  overflow: hidden;
+  display: flex;
+  background-color: #f1f1f1;
+  padding: 15px;
+  margin-bottom: 50px;
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.hold-it {
+  position: relative;
+  width: 305px;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  float: left;
+  overflow: hidden;
+  margin-bottom: 4%;
+}
+
+.overlay {
+  display: block;
+  position: absolute;
+  top: auto;
+  right: auto;
+  left: 0;
+  bottom: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  color: #fff;
+  background-color: #000;
+  opacity: 0;
+  -webkit-transition: all 250ms ease-in;
+  -moz-transition: all 250ms ease-in;
+  -ms-transition: all 250ms ease-in;
+  -o-transition: all 250ms ease-in;
+	transition: all 250ms ease-in;
+}
+
+.hold-it:hover .overlay {
+  opacity: .75;
+}
+
+.hold-it p {
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 6px;
+  margin: auto;
+  font: 100 32px "Helvetica Neue";
+  letter-spacing: 1px;
+}
+.hold-it img {
+  height: 300px;
+  width:335px
+}
+
+
+
+
+
+
 }
