--- a/public/hello.css
+++ b/public/hello.css
@@ -1,36 +1,60 @@
 
 @media (min-width: 80px) and (max-width : 600px) {
-  @import url(http://fonts.googleapis.com/css?family=Lato:300,500);
+* {
+  font-family: Lato, sans-serif;
+}
+
+.color {
+  background-color: #ADEAEA;
+  height: 150px;
+  width: 100%;
+  margin: 0;
+}
 
 .jumbotext {
+  display: none;
   position: absolute;
-  top: 23px;
-  font-size: 8px;
-  font-family: Lato, sans-serif;
+  top: 39%;
+  font-size: 14px;
   text-align: center;
   margin-left: 48%;
+  margin-left: 10%;
 }
+
+.color p, .color h1, .color span {
+  font-size: 16px;
+  text-align: center;
+  margin: 6px;
+  margin-top: 0;
+}
+
+.color h1 {
+  font-size: 35px;
+}
+
+.jumbotext span {
+  display: none;
+}
+
 .contact-icons {
-  font-size: 20px;
+  font-size: 35px;
   position: relative;
-  top: -52px;
+  top: -60px;
   float: right;
-  margin-right: 1%;
+  margin-right: 8%;
 
 }
 a .fa {
 color: #222;
 }
-span {
-  font-size: 9px;
-}
+
 .about-page {
   margin-top: 55px;
 }
 .wrap {
   bottom: 0px;
       /* padding-top: 0; */
-      font: 100 11px/1 Lato, sans-serif;
+      font: 100 12px/1 Lato, sans-serif;
       position: fixed;
       background: white;
       width: 110%;
@@ -45,6 +69,7 @@ span {
 
 .nav li {
   float: left; /*1*/
+  margin-top: -7px;
 }
 
 .nav > li a {
@@ -86,14 +111,13 @@ span {
 }
 h3 {
   font-size: 19px;
-  font-family: Lato, sans-serif;
   text-align: center;
   /*padding-top: 2px;*/
 }
 
 .about {
   position: absolute;
-  margin-top: 174px;
+  margin-top: 190px;
   text-align: center;
   margin-right: 20px;
   margin-left: 20px;
@@ -102,20 +126,14 @@ h3 {
 
 .about p {
   font-size: 12px;
-  font-family: Lato, sans-serif;
-  /*text-align:center;*/
-  /*padding: 46px 210px 70px 160px;*/
-  /*line-height: 1.4;*/
   color: #757575;
-font-family: Lato, sans-serif;
 line-height: 1.4;
 text-align: justify;
 display: block;
 }
 
 .info {
-  font-size: 8px;
-  font-family: Lato, sans-serif;
+  font-size: 9px;
   text-align: center;
   float: left;
   margin-left: 14px;
@@ -123,8 +141,7 @@ display: block;
   margin-top: 30px;
 }
 .info2 {
-  font-size: 8px;
-  font-family: Lato, sans-serif;
+  font-size: 9px;
   text-align: center;
   float: right;
   margin-right: 30px;
@@ -195,7 +212,6 @@ height: 92px;
 .experience p {
   display: inline-block;
   color: #757575;
-  font-family: Lato, sans-serif;
   line-height: 1.4;
   text-align: justify;
   display: block;
@@ -203,27 +219,6 @@ height: 92px;
   padding: 12px;
   width: 72%;
 }
-
-/*
-.col-image {
-  width: 66.66%;
-  margin-right: 3%;
-}
-
-.col-text {
-  width: 33.33%;
-}
-
-.col-text p {
-  margin: 0 0 13.5px;
-}
-
-.col-image img {
-  max-width: 100%;
-  height: auto;
-}*/
-
-
 
 
 * {
@@ -250,7 +245,7 @@ height: 92px;
 
 .hold-it {
   position: relative;
-  width: 305px;
+  width: 335px;
   height: 300px;
   margin-left: auto;
   margin-right: auto;
@@ -287,19 +282,24 @@ height: 92px;
 .hold-it p {
   position: absolute;
   bottom: 0;
-  padding-bottom: 6px;
+  padding-bottom: 10%;
   margin: auto;
-  font: 100 32px "Helvetica Neue";
+  font: 100 18px "Helvetica Neue";
   letter-spacing: 1px;
 }
+
+.hold-it h4 {
+  position: relative;
+  bottom: 0;
+  padding-bottom: 6px;
+  margin: auto;
+  font: 100 24px "Helvetica Neue";
+  letter-spacing: 1px;
+}
+
 .hold-it img {
   height: 300px;
   width:335px
 }
-
-
-
-
-
 
 }
