--- a/public/hello.css
+++ b/public/hello.css
@@ -215,6 +215,21 @@
     margin: 0;
     padding:0;
   }
+
+  .flex-item img:hover {
+    width: 105%;
+  }
+
+  .html-item img:hover {
+    width: 117px;
+    height: 120px;
+  }
+
+  .ruby-item img:hover {
+    width: 107px;
+    height: 110px;
+  }
+
   .experience {
     display: flex;
     flex-flow: row wrap;
@@ -259,7 +274,7 @@
       display: flex;
       background-color: #f1f1f1;
       padding: 15px;
-      margin-bottom: 50px;
+      margin-bottom: 35px;
       content: "";
       display: table;
       clear: both;
@@ -268,10 +283,10 @@
 
     .hold-it {
       position: relative;
-      width: 335px;
+      width: 355px;
       height: 300px;
       margin-left: auto;
-      margin-right: 10px;
+      margin-right: 15px;
       float: left;
       overflow: hidden;
       margin-bottom: 4%;
@@ -322,7 +337,7 @@
 
     .hold-it img {
       height: 300px;
-      width:335px
+      width:360px
     }
 
 }
@@ -607,7 +622,7 @@
 
   .hold-it {
     position: relative;
-    width: 300px;
+    width: 345px;
     height: 280px;
     margin-left: auto;
     margin-right: auto;
