--- a/public/hello.css
+++ b/public/hello.css
@@ -283,13 +283,13 @@
 
     .hold-it {
       position: relative;
-      width: 355px;
-      height: 300px;
+      width: auto;
+      height: auto;
       margin-left: auto;
       margin-right: 15px;
       float: left;
       overflow: hidden;
-      margin-bottom: 4%;
+      margin-bottom: 7px;
     }
 
     .projects .hold-it:last-child {
@@ -340,8 +340,8 @@
     }
 
     .hold-it img {
-      height: 300px;
-      width:360px
+      height: 280px;
+      width:380px
     }
 
 }
